--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "oh-git",
   "displayName": "Oh! Git",
-  "description": "packed serveral usefull functional git extensions  ",
+  "description": "Packed some usefull functional git extensions",
   "version": "1.0.0",
   "publisher": "IOLOII",
   "license": "MIT",
